After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 595996 - Fixes for scrolling NbtkBoxLayout
Fixes for scrolling NbtkBoxLayout
Status: RESOLVED FIXED
Product: gnome-shell
Classification: Core
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: gnome-shell-maint
gnome-shell-maint
Depends on:
Blocks:
 
 
Reported: 2009-09-22 19:17 UTC by Owen Taylor
Modified: 2009-10-01 19:31 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Don't use the default stage when setting up adjustments (2.81 KB, patch)
2009-09-22 19:17 UTC, Owen Taylor
none Details | Review
Allocate children as wide as the scrolled area (1.93 KB, patch)
2009-09-22 19:18 UTC, Owen Taylor
none Details | Review
Allocate children as wide as the scrolled area (1.90 KB, patch)
2009-09-30 00:17 UTC, Owen Taylor
committed Details | Review
Don't use the default stage when setting up adjustments (2.77 KB, patch)
2009-09-30 00:17 UTC, Owen Taylor
committed Details | Review

Description Owen Taylor 2009-09-22 19:17:48 UTC
Two minor bug fixes related to using NbtkBoxLayout as the child of a
NbtkScrollView.
Comment 1 Owen Taylor 2009-09-22 19:17:50 UTC
Created attachment 143740 [details] [review]
Don't use the default stage when setting up adjustments

If the actor isn't in a stage, then setting up the adjustment
based on the actor's size (which we can't compute) and the
size of the default stage (which isn't relevant), doesn't make
sense. Just use arbitrary default values.

The adjustments will be updated to reasonable values when first
the box is first allocated.

It's not entirely clear to me why we ever want to compute the
adjustment settings this way; perhaps we should always use
default values.

http://bugzilla.moblin.org/show_bug.cgi?id=6307
Comment 2 Owen Taylor 2009-09-22 19:18:27 UTC
Created attachment 143741 [details] [review]
Allocate children as wide as the scrolled area

When we are scrolling a vertical box horizontally , children should be
allocated horizontally as wide as the full horizontal scrolled area,
not just to the size of the "viewport". Similarly for a horizontal box.

http://bugzilla.moblin.org/show_bug.cgi?id=6312
Comment 3 Owen Taylor 2009-09-30 00:17:23 UTC
Created attachment 144328 [details] [review]
Allocate children as wide as the scrolled area

When we are scrolling a vertical box horizontally , children should be
allocated horizontally as wide as the full horizontal scrolled area,
not just to the size of the "viewport". Similarly for a horizontal box.

http://bugzilla.moblin.org/show_bug.cgi?id=6312
Comment 4 Owen Taylor 2009-09-30 00:17:51 UTC
Created attachment 144329 [details] [review]
Don't use the default stage when setting up adjustments

If the actor isn't in a stage, then setting up the adjustment
based on the actor's size (which we can't compute) and the
size of the default stage (which isn't relevant), doesn't make
sense. Just use arbitrary default values.

The adjustments will be updated to reasonable values when first
the box is first allocated.

It's not entirely clear to me why we ever want to compute the
adjustment settings this way; perhaps we should always use
default values.

http://bugzilla.moblin.org/show_bug.cgi?id=6307
Comment 5 Colin Walters 2009-09-30 21:37:20 UTC
Review of attachment 144328 [details] [review]:

LGTM
Comment 6 Colin Walters 2009-09-30 21:39:12 UTC
Review of attachment 144329 [details] [review]:

LGTM
Comment 7 Owen Taylor 2009-10-01 19:31:11 UTC
Attachment 144328 [details] pushed as 28dbf7a - Allocate children as wide as the scrolled area
Attachment 144329 [details] pushed as d67e54d - Don't use the default stage when setting up adjustments