src/st/st-box-layout.c
@@ -151,8 +151,6 @@ scrollable_get_adjustments (StScrollable  *scrollable,
 
   actor = CLUTTER_ACTOR (scrollable);
   stage = clutter_actor_get_stage (actor);
-  if (G_UNLIKELY (stage == NULL))
-    stage = clutter_stage_get_default ();
 
   if (hadjustment)
     {
@@ -163,9 +161,16 @@ scrollable_get_adjustments (StScrollable  *scrollable,
           StAdjustment *adjustment;
           gdouble width, stage_width, increment;
 
-          width = clutter_actor_get_width (actor);
-          stage_width = clutter_actor_get_width (stage);
-          increment = MAX (1.0, MIN (stage_width, width));
+          if (stage)
+            {
+              width = clutter_actor_get_width (actor);
+              stage_width = clutter_actor_get_width (stage);
+              increment = MAX (1.0, MIN (stage_width, width));
+            }
+          else
+            {
+              width = increment = 1.0;
+            }
 
           adjustment = st_adjustment_new (0,
                                           0,
@@ -191,9 +196,16 @@ scrollable_get_adjustments (StScrollable  *scrollable,
           StAdjustment *adjustment;
           gdouble height, stage_height, increment;
 
-          height = clutter_actor_get_height (actor);
-          stage_height = clutter_actor_get_height (stage);
-          increment = MAX (1.0, MIN (stage_height, height));
+          if (stage)
+            {
+              height = clutter_actor_get_height (actor);
+              stage_height = clutter_actor_get_height (stage);
+              increment = MAX (1.0, MIN (stage_height, height));
+            }
+          else
+            {
+              height = increment = 1.0;
+            }
 
           adjustment = st_adjustment_new (0,
                                           0,
